# wasm_lab

./: .gitignore  README.md  mix.exs
assets/: babel.config.js  package-lock.json  package.json  webpack.config.js
assets/css/: app.scss  styles.scss
assets/js/: app.js  load_fireworks.js  load_game_of_life.js  load_hello_bindgen.js
assets/js/components/: Ffmpeg.js  RustyCheckers.js  RustyGo.js
assets/static/js/: language.js  mq_js_bundle.js  player.js  playerVariable.js  playlist.js  playlist.json  playlist_nojingle.json  stockfish.js  stockfish.wasm  stockfish.worker.js
assets/wasm/asteroids/: asteroids.wasm
assets/wasm/fireworks/: Cargo.toml
assets/wasm/game-of-life/: Cargo.toml  lib.js
assets/wasm/game-of-life/src/: lib.rs
assets/wasm/hello-bindgen/: Cargo.toml  defined-in-js.js
assets/wasm/hello-bindgen/src/: julia.rs  lib.rs  oscillator.rs  sox.rs
assets/wasm/hello-wasm/: Cargo.toml  lib.js
assets/wasm/no_bundler/: Cargo.toml  no_bundler.wasm
assets/wasm/rogue/: Cargo.toml
assets/wasm/rustycheckers/: Cargo.toml  lib.js
assets/wasm/rustygo/: Cargo.toml
config/: config.exs  dev.exs  prod.exs  prod.secret.exs  test.exs
lib/: wasm_lab.ex  wasm_lab_web.ex
lib/wasm_lab/: application.ex  repo.ex
lib/wasm_lab/native/: math.ex
lib/wasm_lab_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
lib/wasm_lab_web/channels/: user_socket.ex
lib/wasm_lab_web/controllers/: page_controller.ex
native/math/: Cargo.toml  README.md
priv/repo/: seeds.exs
test/: test_helper.exs
test/support/: channel_case.ex  conn_case.ex  data_case.ex
(+52 files in other folders)
