[package]
name = "game-of-life"
version = "0.1.0"
authors = ["kokolegorille <koko.le.gorille@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"] 

[dependencies]
wasm-bindgen = "0.2"
fixedbitset = "0.3.0"
wee_alloc = { version = "0.4.5", optional = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
