[package]
name = "hello-bindgen"
version = "0.1.0"
authors = ["kokolegorille <koko.le.gorille@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3.51"
humantime = "2"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  #
  "Window",
  "Performance",
  "PerformanceTiming",
  #
  "CanvasRenderingContext2d",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "Window",
]